# mlops-image-classifier

./: README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci-cd.yaml
FastAPI/: Dockerfile  app.py  requirements-dev.txt  requirements.txt
airflow/: Dockerfile
airflow/dags/: image_preprocesser.py  minio_data_scheduler.py  model_retraining.py
airflow/dags/custom_modules/: model_retraining_methods.py  preprocessing_script.py
data/metadata/: Dockerfile  init_db.sql
gradio/: Dockerfile  gradio_app.py
kubernetes/: fastapi-deployment.yaml
minio_data/.minio.sys/: format.json
minio_data/mlops-bucket/images/augmented/dandelion/1.jpg/9c07f246-ecb0-4c73-ae78-e76d01d26a10/: part.1
minio_data/mlops-bucket/images/augmented/dandelion/10.jpg/c442d45d-7b27-4e80-927f-c0d5e8eefab0/: part.1
minio_data/mlops-bucket/images/augmented/dandelion/100.jpg/1e0756dd-f289-4b98-a7e5-bf52725a4a63/: part.1
minio_data/mlops-bucket/images/augmented/dandelion/101.jpg/a4bced59-b037-4e51-a0b6-364e29068f69/: part.1
minio_data/mlops-bucket/images/augmented/dandelion/102.jpg/8bae3fe5-ef13-4d9f-8ca2-5fea20b6cf3e/: part.1
minio_data/mlops-bucket/images/augmented/dandelion/103.jpg/494a0600-1543-4516-bbc2-497cfb31d7dc/: part.1
minio_data/mlops-bucket/images/augmented/dandelion/104.jpg/f8d6b74a-8e38-4bcc-8cd4-8c36af0a5fda/: part.1
mlflow/: Dockerfile
mlflow/mlflow_db/: mlflow.db
src/data_ingestion/: store_metadata.sql
src/my_model/: model_train.py  training_methods.py
src/my_model/tmp/: README.md  dl_images.ipynb
tests/: requirements-dev.txt  test_app.py
(+795 files in other folders)
